--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,13 +1,13 @@
 @import "bootstrap";
 
 html {
-background-image:url('back.jpg');
+background-image:url("http://i41.tinypic.com/iyztac.jpg");
 
 }
 
 body {
 	
-	background-image:url('back.jpg');
+	background-image:url("http://i41.tinypic.com/iyztac.jpg");
 	font-family:"Georgia", serif;
 
 
