--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,11 @@
 <p>Ruby on Rails, CSS/Bootstrap, Javascript/Jquery, Postegres, Heroku, Amazon Web Services<p>
 
 <h3>Portfolio</h3>
-<p><a href="www.GabyDesignJewel.com">www.GabyDesignJewel.com</a></p>
-<p><a href="www.thedailycount.com">TheDailyCount.com</a><p>
+
+<p>
+<a href="http://SevilleDesignJewel.com">www.SevilleDesignJewel.com</a>
+</p>
+<p><a href="http://www.thedailycount.com">TheDailyCount.com</a><p>
 	<br>
 <a href="mailto:szshreder@gmail.com"><button type="button" class="btn btn-primary">Email me</button></a>
 
