--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 <p>
 <a href="http://SevilleDesignJewel.com">www.SevilleDesignJewel.com</a>
 </p>
-<p><a href="http://www.thedailycount.com">TheDailyCount.com</a><p>
+<p><a href="http://www.thedailycount.com">www.TheDailyCount.com</a><p>
 	<br>
 <a href="mailto:szshreder@gmail.com"><button type="button" class="btn btn-primary">Email me</button></a>
 
