--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,14 +1,15 @@
 @import "bootstrap";
 
 html {
-background-image:url("http://i41.tinypic.com/iyztac.jpg");
+background-image:url("http://i44.tinypic.com/10r1sty.jpg");
 
 }
 
 body {
 	
-	background-image:url("http://i41.tinypic.com/iyztac.jpg");
+	background-image:url("http://i44.tinypic.com/10r1sty.jpg");
 	font-family:"Georgia", serif;
+	color:#ffffff;
 
 
 }
